--- a/app/src/main/res/layout/fragment_learning_leaders.xml
+++ b/app/src/main/res/layout/fragment_learning_leaders.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.Fragments.LearningLeadersFragment">
+        tools:context=".ui.fragments.LearningLeadersFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/learning_leaders_recyclerview"
