--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.HomepageActivity">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
