--- a/app/src/main/res/layout/learning_leader_layout_item.xml
+++ b/app/src/main/res/layout/learning_leader_layout_item.xml
@@ -10,14 +10,16 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_margin="@dimen/standard_view_margin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:padding="5dp"
+        android:layout_height="wrap_content">
 
 
         <ImageView
             android:id="@+id/learning_leader_image_badge"
             android:layout_width="100dp"
-            android:src="@color/colorPrimary"
+            displayBadge="@{learningLeaderModel.learningBadgeUrl}"
             android:layout_margin="@dimen/standard_view_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -40,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@{learningLeaderModel.hoursAndCountry"
+            android:text="@{learningLeaderModel.hoursAndCountry}"
             app:layout_constraintBottom_toBottomOf="@+id/learning_leader_image_badge"
             app:layout_constraintStart_toEndOf="@id/learning_leader_image_badge"
             app:layout_constraintTop_toBottomOf="@id/learning_leader_full_name"
