--- a/app/src/main/res/layout/learning_leader_layout_item.xml
+++ b/app/src/main/res/layout/learning_leader_layout_item.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/roboto"
                 android:padding="@dimen/standard_view_padding"
                 android:text="@{learningLeaderModel.leaderName}"
                 android:textSize="16sp"
@@ -51,9 +52,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="sans-serif-thin"
+                android:padding="@dimen/standard_view_padding"
                 android:text="@{learningLeaderModel.hoursAndCountry}"
                 android:textSize="14sp"
-                android:padding="@dimen/standard_view_padding"
                 app:layout_constraintBottom_toBottomOf="@+id/learning_leader_image_badge"
                 app:layout_constraintStart_toEndOf="@id/learning_leader_image_badge"
                 app:layout_constraintTop_toBottomOf="@id/learning_leader_full_name"
