--- a/app/src/main/res/layout/skills_iq_leader_layout_item.xml
+++ b/app/src/main/res/layout/skills_iq_leader_layout_item.xml
@@ -3,48 +3,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="skillsIQLeaderCustomModel"
             type="com.prosperekwerike.gadsleaderboard.models.SkillsIQLeadersCustomModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_view_margin"
+        android:padding="@dimen/standard_view_padding"
+        app:cardCornerRadius="1dp"
+        app:cardElevation="5dp">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/learning_leader_image_badge"
-            android:layout_width="100dp"
-            android:src="@color/colorPrimary"
-            android:layout_margin="@dimen/standard_view_margin"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_height="70dp" />
+            <ImageView
+                android:id="@+id/learning_leader_image_badge"
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_margin="@dimen/standard_view_margin"
+                android:src="@color/colorPrimary"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/skills_iq_leader_full_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@{skillsIQLeaderCustomModel.leaderName}"
-            app:layout_constraintBottom_toBottomOf="@+id/learning_leader_image_badge"
-            app:layout_constraintStart_toEndOf="@id/learning_leader_image_badge"
-            app:layout_constraintTop_toTopOf="@+id/learning_leader_image_badge" />
+            <TextView
+                android:id="@+id/skills_iq_leader_full_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{skillsIQLeaderCustomModel.leaderName}"
+                app:layout_constraintBottom_toBottomOf="@+id/learning_leader_image_badge"
+                app:layout_constraintStart_toEndOf="@id/learning_leader_image_badge"
+                app:layout_constraintTop_toTopOf="@+id/learning_leader_image_badge" />
 
-        <TextView
-            android:id="@+id/skills_iq_leader_learning_hours"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@{skillsIQLeaderCustomModel.leaderIQScoreAndCountry"
-            app:layout_constraintBottom_toBottomOf="@+id/learning_leader_image_badge"
-            app:layout_constraintStart_toEndOf="@id/learning_leader_image_badge"
-            app:layout_constraintTop_toBottomOf="@id/skills_iq_leader_full_name"
-            app:layout_constraintVertical_bias="0.288" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/skills_iq_leader_learning_hours"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{skillsIQLeaderCustomModel.leaderIQScoreAndCountry"
+                app:layout_constraintBottom_toBottomOf="@+id/learning_leader_image_badge"
+                app:layout_constraintStart_toEndOf="@id/learning_leader_image_badge"
+                app:layout_constraintTop_toBottomOf="@id/skills_iq_leader_full_name"
+                app:layout_constraintVertical_bias="0.288" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
