--- a/app/src/main/res/layout/learning_leader_layout_item.xml
+++ b/app/src/main/res/layout/learning_leader_layout_item.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="sans-serif-thin"
+                android:fontFamily="sans-serif"
                 android:padding="@dimen/standard_view_padding"
                 android:text="@{learningLeaderModel.hoursAndCountry}"
                 android:textSize="14sp"
