Working on the skills IQ leaders display

--- a/app/src/main/res/layout/fragment_skill_i_q_leaders.xml
+++ b/app/src/main/res/layout/fragment_skill_i_q_leaders.xml
@@ -12,9 +12,9 @@
         tools:context=".ui.fragments.SkillIQLeaders">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/skills_iq_leaders_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/skills_iq_leaders_recyclerview" />
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 </layout>
