--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -16,6 +16,7 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
+            app:tabGravity="fill"
             android:layout_height="wrap_content" />
 
         <androidx.viewpager.widget.ViewPager
