--- a/app/src/main/res/layout/fragment_learning_leaders.xml
+++ b/app/src/main/res/layout/fragment_learning_leaders.xml
@@ -11,10 +11,18 @@
         android:layout_height="match_parent"
         tools:context=".ui.fragments.LearningLeadersFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/learning_leaders_recyclerview"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_to_refresh_collection_of_learning_leaders"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/learning_leaders_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </FrameLayout>
 </layout>
