--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -13,10 +13,18 @@
         android:layout_height="match_parent"
         tools:context=".ui.HomepageActivity">
 
+        <include layout="@layout/homepage_custom_toolbar"/>
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             app:tabGravity="fill"
+            app:tabTextAppearance="@style/MyCustomTabLayoutTextAppearance"
+            app:tabBackground="@android:color/background_dark"
+            app:tabTextColor="@android:color/darker_gray"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabIndicatorHeight="6dp"
             android:layout_height="wrap_content" />
 
         <androidx.viewpager.widget.ViewPager
