--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -13,7 +13,8 @@
         android:layout_height="match_parent"
         tools:context=".ui.HomepageActivity">
 
-        <include layout="@layout/homepage_custom_toolbar"/>
+        <include layout="@layout/homepage_custom_toolbar"
+            android:id="@+id/homepage_custom_toolbar"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/main_toolbar"
