--- a/app/src/main/res/layout/homepage_custom_toolbar.xml
+++ b/app/src/main/res/layout/homepage_custom_toolbar.xml
@@ -12,14 +12,15 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/customToolbarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="@dimen/standard_view_margin"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="@dimen/standard_view_margin"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="@dimen/standard_view_margin"
+            android:layout_marginBottom="@dimen/standard_view_margin"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
             android:text="LEADERBOARD"
@@ -27,15 +28,16 @@
             android:textSize="18sp" />
 
         <Button
+            android:id="@+id/customToolbarSubmitButton"
             android:layout_width="wrap_content"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            app:backgroundTint="@android:color/white"
-            android:textColor="@android:color/background_dark"
-            android:background="@drawable/submit_button_background"
             android:layout_margin="@dimen/standard_view_margin"
+            android:layout_weight="1"
+            android:background="@drawable/submit_button_background"
             android:text="Submit"
-            />
+            android:textAppearance="@style/MyCustomTabLayoutTextAppearance"
+            android:textColor="@android:color/background_dark"
+            app:backgroundTint="@android:color/white" />
     </LinearLayout>
 
 
