--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent"
-        tools:context=".ui.HomepageActivity">
+        tools:context=".ui.activities.HomepageActivity">
 
         <include layout="@layout/homepage_custom_toolbar"
             android:id="@+id/homepage_custom_toolbar"/>
