--- a/app/src/main/res/layout/activity_submission.xml
+++ b/app/src/main/res/layout/activity_submission.xml
@@ -4,6 +4,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@android:color/background_dark"
     tools:context=".ui.activities.SubmissionActivity">
+
+
+    <TextView
+        android:id="@+id/submit_project_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_view_margin"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:padding="@dimen/standard_view_padding"
+        android:text="Project Submission"
+        android:textColor="@color/goldColor"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/first_and_last_name_view_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/submit_project_label">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/first_name_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/standard_view_margin"
+            android:layout_weight="1"
+            android:hint="First Name"
+            app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textShortMessage|textPersonName" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/last_name_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/standard_view_margin"
+            android:layout_weight="1"
+            android:hint="Last Name"
+            app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textShortMessage|textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_address_text_input_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_view_margin"
+        android:hint="Email Address"
+        app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
+        app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
+        app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
+        app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius"
+        app:layout_constraintTop_toBottomOf="@id/first_and_last_name_view_group">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
