--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="standard_view_margin">10dp</dimen>
     <dimen name="standard_view_padding">5dp</dimen>
+    <dimen name="text_input_box_corner_radius">5dp</dimen>
 </resources>
