--- a/app/src/main/res/layout/activity_submission.xml
+++ b/app/src/main/res/layout/activity_submission.xml
@@ -1,145 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="@android:color/background_dark"
-    tools:context=".ui.activities.SubmissionActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <TextView
-        android:id="@+id/submit_project_label"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_view_margin"
-        android:fontFamily="@font/roboto"
-        android:gravity="center"
-        android:padding="@dimen/standard_view_padding"
-        android:text="Project Submission"
-        android:textColor="@color/goldColor"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="@android:color/background_dark"
+        tools:context=".ui.activities.SubmissionActivity">
 
-    <LinearLayout
-        android:id="@+id/first_and_last_name_view_group"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/submit_project_label">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/first_name_text_input_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        <TextView
+            android:id="@+id/submit_project_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/standard_view_margin"
-            android:layout_weight="1"
-            android:hint="First Name"
-            app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
-            app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
-            app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
-            app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius">
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:padding="@dimen/standard_view_padding"
+            android:text="Project Submission"
+            android:textColor="@color/goldColor"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textfield.TextInputEditText
+        <LinearLayout
+            android:id="@+id/first_and_last_name_view_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/submit_project_label">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/first_name_text_input_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textShortMessage|textPersonName" />
+                android:layout_margin="@dimen/standard_view_margin"
+                android:layout_weight="1"
+                android:hint="First Name"
+                app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textShortMessage|textPersonName" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/last_name_text_input_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/standard_view_margin"
+                android:layout_weight="1"
+                android:hint="Last Name"
+                app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textShortMessage|textPersonName" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/last_name_text_input_layout"
+            android:id="@+id/email_address_text_input_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_view_margin"
-            android:layout_weight="1"
-            android:hint="Last Name"
+            android:layout_marginLeft="@dimen/standard_view_margin"
+            android:layout_marginTop="@dimen/text_input_layout_margin_top"
+            android:layout_marginRight="@dimen/standard_view_margin"
+            android:hint="Email Address"
             app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
             app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
             app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
-            app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius">
+            app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/first_and_last_name_view_group">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textShortMessage|textPersonName" />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
-    </LinearLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_address_text_input_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/standard_view_margin"
-        android:layout_marginTop="@dimen/text_input_layout_margin_top"
-        android:layout_marginRight="@dimen/standard_view_margin"
-        android:hint="Email Address"
-        app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
-        app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
-        app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
-        app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/first_and_last_name_view_group">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/project_github_link_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/standard_view_margin"
+            android:layout_marginTop="@dimen/text_input_layout_margin_top"
+            android:layout_marginRight="@dimen/standard_view_margin"
+            android:hint="Project on GITHUB (link)"
+            app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
+            app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/email_address_text_input_layout">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/project_github_link_text_input_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/standard_view_margin"
-        android:layout_marginTop="@dimen/text_input_layout_margin_top"
-        android:layout_marginRight="@dimen/standard_view_margin"
-        android:hint="Project on GITHUB (link)"
-        app:boxCornerRadiusBottomEnd="@dimen/text_input_box_corner_radius"
-        app:boxCornerRadiusBottomStart="@dimen/text_input_box_corner_radius"
-        app:boxCornerRadiusTopEnd="@dimen/text_input_box_corner_radius"
-        app:boxCornerRadiusTopStart="@dimen/text_input_box_corner_radius"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_address_text_input_layout">
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:backgroundTint="@color/goldColor"
-        android:text="Submit"
-        android:textAppearance="@style/MyCustomTabLayoutTextAppearance"
-        app:cornerRadius="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/project_github_link_text_input_layout" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/submit_project_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:backgroundTint="@color/goldColor"
+            android:text="Submit"
+            android:textAppearance="@style/MyCustomTabLayoutTextAppearance"
+            app:cornerRadius="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/project_github_link_text_input_layout" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
