--- a/app/src/main/res/layout/submit_project_custom_alert_dialog_layout.xml
+++ b/app/src/main/res/layout/submit_project_custom_alert_dialog_layout.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/standard_view_margin"
-        android:fontFamily="@font/roboto"
+        android:fontFamily="@font/roboto_medium"
         android:padding="@dimen/standard_view_padding"
         android:text="Are you sure?"
         android:textSize="18sp" />
