Added a ripple effect to the homepage submit button

--- a/app/src/main/res/layout/submission_not_successful_custom_alert_dialog_layout.xml
+++ b/app/src/main/res/layout/submission_not_successful_custom_alert_dialog_layout.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</LinearLayout>
+    <data>
+
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="@dimen/standard_view_margin"
+            android:padding="@dimen/standard_view_padding"
+            android:src="@drawable/ic_problem_encountered_icon"
+            app:tint="@android:color/holo_red_dark" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/standard_view_margin"
+            android:fontFamily="@font/roboto_medium"
+            android:padding="@dimen/standard_view_padding"
+            android:text="Submission not Successful"
+            android:textSize="18sp" />
+    </LinearLayout>
+</layout>
