--- a/app/src/main/res/layout/homepage_custom_toolbar.xml
+++ b/app/src/main/res/layout/homepage_custom_toolbar.xml
@@ -27,14 +27,14 @@
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/customToolbarSubmitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/standard_view_margin"
-            android:layout_weight="1"
-            android:background="@drawable/submit_button_background"
+            app:cornerRadius="12dp"
             android:text="Submit"
+            app:rippleColor="@color/goldColor"
             android:textAppearance="@style/MyCustomTabLayoutTextAppearance"
             android:textColor="@android:color/background_dark"
             app:backgroundTint="@android:color/white" />
