--- a/app/src/main/res/layout/submit_project_custom_alert_dialog_layout.xml
+++ b/app/src/main/res/layout/submit_project_custom_alert_dialog_layout.xml
@@ -26,6 +26,7 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/standard_view_margin"
             android:fontFamily="@font/roboto_medium"
+            android:textStyle="bold"
             android:padding="@dimen/standard_view_padding"
             android:text="Are you sure?"
             android:textSize="18sp" />
@@ -41,9 +42,10 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="@dimen/standard_view_margin"
             android:layout_marginRight="@dimen/standard_view_margin"
-            android:layout_marginBottom="@dimen/standard_view_margin"
+            android:layout_marginBottom="24dp"
             android:padding="@dimen/standard_view_padding"
             android:text="Yes"
+            app:strokeWidth="3dp"
             android:textColor="@color/goldColor"
             android:textSize="16sp"
             app:cornerRadius="5dp"
