--- a/app/src/main/res/layout/submission_not_successful_custom_alert_dialog_layout.xml
+++ b/app/src/main/res/layout/submission_not_successful_custom_alert_dialog_layout.xml
@@ -23,8 +23,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_view_margin"
+            android:layout_marginStart="@dimen/standard_view_margin"
+            android:layout_marginLeft="@dimen/standard_view_margin"
+            android:layout_marginEnd="@dimen/standard_view_margin"
+            android:layout_marginTop="@dimen/standard_view_margin"
+            android:layout_marginBottom="24dp"
             android:fontFamily="@font/roboto_medium"
+            android:textStyle="bold"
             android:padding="@dimen/standard_view_padding"
             android:text="Submission not Successful"
             android:textSize="18sp" />
