--- a/app/src/main/res/layout/activity_submission.xml
+++ b/app/src/main/res/layout/activity_submission.xml
@@ -14,12 +14,21 @@
         android:background="@android:color/background_dark"
         tools:context=".ui.activities.SubmissionActivity">
 
+        <include
+            android:id="@+id/submit_project_activity_custom_toolbar"
+            layout="@layout/submit_project_activity_custom_toolbar" />
+
 
         <TextView
             android:id="@+id/submit_project_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_view_margin"
+            android:layout_marginStart="@dimen/standard_view_margin"
+            android:layout_marginLeft="@dimen/standard_view_margin"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="@dimen/standard_view_margin"
+            android:layout_marginRight="@dimen/standard_view_margin"
+            android:layout_marginBottom="@dimen/standard_view_margin"
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:padding="@dimen/standard_view_padding"
@@ -30,7 +39,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/submit_project_activity_custom_toolbar" />
 
         <LinearLayout
             android:id="@+id/first_and_last_name_view_group"
