--- a/app/src/main/res/layout/activity_submission.xml
+++ b/app/src/main/res/layout/activity_submission.xml
@@ -115,6 +115,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:inputType="textEmailAddress|textShortMessage"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -139,6 +140,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:inputType="textShortMessage|textWebEditText"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
