--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimary">#040404</color>
+    <color name="colorPrimaryDark">#040404</color>
+    <color name="colorAccent">#040404</color>
     <color name="goldColor">#f4971e</color>
+
+    <color name="darken_ray">#141414</color>
+    <color name="backgroundColor">#040404</color>
 </resources>
