Added the welcome splash screen

--- a/app/src/main/res/layout/activity_welcome_splash_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_splash_screen.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.WelcomeSplashScreenActivity">
 
+
+    <com.prosperekwerike.gadsleaderboard.customviews.Blaziers
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/backgroundColor" />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="250dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
+        android:src="@drawable/gads_home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
