Added gads icon

--- a/app/src/main/res/layout/submit_project_activity_custom_toolbar.xml
+++ b/app/src/main/res/layout/submit_project_activity_custom_toolbar.xml
@@ -11,6 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="@dimen/standard_view_padding"
+            android:src="@drawable/gads_icon"/>
+
         <TextView
             android:textSize="18sp"
             android:textColor="@android:color/white"
