--- a/app/src/main/res/layout/activity_submission.xml
+++ b/app/src/main/res/layout/activity_submission.xml
@@ -140,7 +140,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:inputType="textShortMessage|textWebEditText"
+                android:inputType="textShortMessage"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
