Removed blank screen from splash screen

--- a/app/src/main/res/layout/activity_welcome_splash_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_splash_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.activities.WelcomeSplashScreenActivity">
 
 
-    <com.prosperekwerike.gadsleaderboard.customviews.Blaziers
+    <com.prosperekwerike.gadsleaderboardren.customviews.Blaziers
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/backgroundColor" />
