--- a/app/src/main/res/layout/skills_iq_leader_layout_item.xml
+++ b/app/src/main/res/layout/skills_iq_leader_layout_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="skillsIQLeaderCustomModel"
-            type="com.prosperekwerike.gadsleaderboard.domain.SkillsIQLeadersCustomModel" />
+            type="com.prosperekwerike.gadsleaderboardren.domain.SkillsIQLeadersCustomModel" />
     </data>
 
 
