--- a/app/src/main/res/layout/learning_leader_layout_item.xml
+++ b/app/src/main/res/layout/learning_leader_layout_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="learningLeaderModel"
-            type="com.prosperekwerike.gadsleaderboard.domain.LearningLeadersCustomModel" />
+            type="com.prosperekwerike.gadsleaderboardren.domain.LearningLeadersCustomModel" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
